--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,3 +2,23 @@
 version: '3'
 
 services:
+
+  lamp-server: 
+
+    container_name: "lamp-server"
+    image: "mattrayner/lamp"
+
+    ports: 
+      - 80:80
+      
+    volumes:
+      - type: volume
+        source: mysql-data
+        target: /var/lib/mysql
+      - type: volume
+        source: apache-data
+        target: /app
+  
+volumes:
+  mysql-data:
+  apache-data:
